<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="10dp"
    app:layout_constraintLeft_toRightOf="@+id/imageView">

    <ImageView
        android:id="@+id/twitterCheckImageView"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        app:layout_constraintLeft_toRightOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/twitter_check" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/nav_header_desc"
        android:gravity="bottom"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name"
        android:textColor="@android:color/background_dark"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="screenName"
        android:textColor="@color/twitterGray"
        android:textSize="12dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/status"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/createdAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/date"
        android:textColor="@color/twitterGray"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />
</android.support.constraint.ConstraintLayout>